--- a/Example/NBCollageView/Info.plist
+++ b/Example/NBCollageView/Info.plist
@@ -22,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires camera permission</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires photo permission</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
